--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 # Created by https://www.gitignore.io/api/django
 # Edit at https://www.gitignore.io/?templates=django
+# ignore .vscode
+.vscode/
 
 # project-specific files
 *.csv
